--- a/report/week3report.tex
+++ b/report/week3report.tex
@@ -53,6 +53,12 @@ Here we the define the functions empty to ensure compilation.
 \lstinputlisting[caption = main.ih]{src/a17/main.ih}
 \lstinputlisting[caption = main.cc]{src/a17/main.cc}
 
+\section*{Exercise 20, shlInserter hierarchy}
+We were asked to design a self-generating class template that shifts a number n times as specified in the slides.
+\lstinputlisting[caption = main.h]{src/a20/main.h}
+\lstinputlisting[caption = main.cc]{src/a20/main.cc}
+
+
 \section*{Exercise 21, \texttt{Ptr}, the journey}
 It is pretty hard to make a pointer that is made for a base class but still appropriately frees a derived class, especially if you don't know what you're doing. Fortunately it worked out and we are hopefully a little wiser because of it.
 
